[package]
name = "family-feud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "*"
futures-signals = "0.3.*"
async-std = { version = "1.10.*", features = ["attributes"] }
async-tungstenite = "0.16.*"

log = "0.4.*"
env_logger = "0.9.*"

serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"

tide = "0.16.*"
rust-embed = "6.2.*"

open = "2.0.*"
