[package]
name = "family-feud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.*"
futures-signals = "0.3.*"
async-std = { version = "1.13.*", features = ["attributes"] }
async-tungstenite = "0.28.*"

log = "0.4.*"
env_logger = "0.11.*"

serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"

tide = "0.16.*"
rust-embed = "8.5.*"

open = "5.3.*"
